--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
     <body>
 
-        <h1>Web Page1</h1>
+        <h1>Web Page</h1>
+        <b>
+        <b>
+        <p>This is a test web page for github</p>
 
     </body>
 </html>
